# sfa

./: .gitignore  CMakeLists.txt  README.md
client/: .gitignore  CMakeLists.txt  sfacli.cpp
include/: sfalib.h
lib/: .gitignore  CMakeLists.txt  sfalib.cpp
tests/: CMakeLists.txt
